if(CMAKE_CXX_COMPILER MATCHES "/em\\+\\+(-[a-zA-Z0-9.])?$") 
  set(ASSET_DIR "/examples/assets")
else()
  set(ASSET_DIR ${CMAKE_CURRENT_SOURCE_DIR})
endif()
configure_file(asset.hpp.in ${CMAKE_CURRENT_BINARY_DIR}/asset.hpp)
add_library(asset INTERFACE)
add_library(smk::example::asset ALIAS asset)
target_include_directories(asset INTERFACE ${CMAKE_CURRENT_BINARY_DIR})
