if (EMSCRIPTEN)
  set(ASSET_DIR "/examples/assets")
else()
  set(ASSET_DIR ${CMAKE_CURRENT_SOURCE_DIR})
endif()
configure_file(asset.hpp.in ${CMAKE_CURRENT_BINARY_DIR}/asset.hpp)
add_library(smk_example_asset INTERFACE)
target_include_directories(smk_example_asset INTERFACE ${CMAKE_CURRENT_BINARY_DIR})
